[package]
name = "boredphoton"
version = "0.1.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
config = "0.13.1"
crossbeam = "0.8.1"
log = "0.4.16"
pretty_env_logger = "0.4.0"
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.89"
tokio = {version = "1.16.1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1.48"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = [
	"client",
	"gateway",
	"rustls_backend",
	"model",
	"cache",
]
