[package]
name = "boredphoton"
version = "0.1.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
config = "0.13.3"
crossbeam = "0.8.2"
log = "0.4.19"
pretty_env_logger = "0.5.0"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
tokio = {version = "1.28.2", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1.48"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = [
	"client",
	"gateway",
	"rustls_backend",
	"model",
	"cache",
]
